@@ -3,6 +3,9 @@ use Date::Event;
 
 use-ok "Date::Event";
 
-#pass "replace me";
+my $e = Date::Event.new;
+is $e.is-calculated, False;
+$e.is-calc;
+is $e.is-calculated, True;
 
 done-testing;
